# webshop

./: README.md  alembic.ini  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_10_12_1723-e0dd804c615f_create_products_table.py  2024_10_14_2017-a57ccdb64292_create_users_table.py  2024_10_15_0051-7919de959f00_create_posts_table.py  2024_10_15_0218-05e835decbe3_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
